# uamobile

./: .gitignore  README.md  pyproject.toml  pyproject.toml.example  setup.py
tests/: test_nonmobile.py  test_willcom.py
uamobile/: base.py  context.py  ezweb.py
uamobile/parser/: softbank.py  willcom.py
uamobile/scrapers/: command.py  display.py  flash.py  model.py
